src/components/Navbar/navbar.module.css
.navbar {
  box-sizing: border-box;
  height: 60px;
  padding: 0 20px;
  width: calc(100% - 40px);
  top: 0;
  left: 20px;
  left: 20px;
  display: flex;
  position: fixed;
  z-index: 1;
  justify-content: space-between;
  gap: 50px;
  align-items: center;
  border-bottom: 1px solid rgb(34, 34, 34);
  background-color: rgb(19, 18, 18);
}

.navbar > h1 {
  color: rgb(47, 87, 86);
}

.logo {
  text-decoration: none;
  height: 100%;
  padding: 3px 0;
  display: flex;
  gap: 10px;
  align-items: center;
}
.logo > img {
  height: 70%;
}
.logo > span {
  color: rgb(255, 255, 255);
  font-size: 1.6rem;
}

.navbar > div:nth-child(3) {
  height: 100%;
  display: flex;
  align-items: center;
}

.navbar > div:nth-child(3) > button {
  border: none;
  cursor: pointer;
  background-color: #704d8c;
  color: white;
  padding: 8px 12px;
  border-radius: 25px;
}

.navbar > div:nth-child(3) > img {
  height: 40px;
}

.bar {
  position: relative;
  height: 65%;
}

.bar > input {
  box-sizing: border-box;
  width: 400px;
  height: 100%;
  outline: none;
  border: 1px solid rgb(33, 33, 33);
  border-radius: 22px;
  background-color: rgb(28, 28, 28);
  display: flex;
  align-items: center;
  gap: 10px;
  color: white;
  padding: 0 40px;
  font-size: 1rem;
}

.bar img {
  height: 25px;
  left: 10px;
  top: 7px;
  position: absolute;
  z-index: 1;
}

